# verbleiber

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-linux-binary.sh  config_example.toml
.github/workflows/: ci.yml  release.yml
src/: api.rs  audio.rs  buttons.rs  cli.rs  client.rs  config.rs  devices.rs  events.rs  http.rs  keycodenames.rs  main.rs  model.rs  random.rs  registration.rs  tagreader.rs
