[package]
name = "verbleiber"
version = "0.11.0-dev"
authors = ["Jochen Kupperschmidt"]
edition = "2024"
rust-version = "1.95.0"
description = "Log organizer whereabouts on events via RFID tags and buttons"
readme = "README.md"
repository = "https://github.com/byceps/verbleiber"
license = "MIT"
keywords = ["presence", "rfid"]

[dependencies]
anyhow = "1.0.102"
bimap = "0.6.3"
clap = { version = "4.6.1", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
ctrlc = "3.5.2"
evdev = "0.13.2"
flume = "0.12.0"
log = { version = "0.4.29", features = ["std"] }
fastrand = "2.4.1"
rodio = { version = "0.21.1", default-features = false, features = ["playback", "vorbis"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.2.0"
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json"] }

[profile.release]
strip = true
